Fixed issue with off centre logo

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,9 @@
 }
 
 .logo-drawer {
-    height: 150px;
+    height: 80px;
+    display: block;
+    margin: 0 auto;
 }
 
 .about-photo {
